# Utils

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
include/utils/: non_copyable.hpp  path_parser.hpp  random.hpp
include/utils/eventing/: event.hpp  event_dispatcher.hpp
include/utils/logs/: log_level.hpp  logger.hpp
include/utils/services/: service_interface.hpp  service_locator.hpp
include/utils/time/: clock.hpp  date.hpp  global_clock.hpp  timer.hpp  utils.hpp
src/: path_parser.cpp  random.cpp
src/logs/: logger.cpp
src/time/: clock.cpp  date.cpp  global_clock.cpp  timer.cpp
tests/: CMakeLists.txt  test_non_copyable.cpp  test_path_parser.cpp  test_random.cpp
tests/eventing/: event_dispatcher_access.hpp  test_event_dispatcher.cpp
tests/logs/: test_log_level.cpp  test_logger.cpp
tests/services/: test_global_clock_service.cpp  test_service_locator.cpp
tests/time/: test_date.cpp  test_global_clock.cpp  test_timer.cpp  test_utils.cpp
